# helios

./: .gitignore  README.md  aegis.txt  pyproject.toml
.config/aegis/: gemini_usage.json
.config/uv/: uv-receipt.json
aegis/: main.py
aegis/brain/: ncp.py
aegis/eval/: runner.py
aegis/hive/: text_encoder.py
aegis/mnemosyne/: db.py  retrieve.py  write.py
aegis/nexus/: bus.py  clock.py  neurobus.py
aegis/observability/: __init__.py  paths.py  renderer_state.py  turns.py
aegis/renderer/: __init__.py  _quota.py  dispatcher.py  fallback.py  gemini.py  gemini.py.bak-20260523-203028  gemini.py.bak-stage2-212228  groq.py  openai_compat.py
aegis/web/: server.py
scripts/: aegis-cli
systemd/: aegis.service
tests/: test_mnemosyne_roundtrip.py  test_neurobus_contract.py  test_quota_pacific_day.py  test_renderer_chain.py
