[project]
name = "aegis"
version = "0.1.0"
description = "Aegis — Linux-resident AI symbiote (v1 minimal loop)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Navpreet", email = "999navtoor@gmail.com" }]
license = { text = "All rights reserved" }

dependencies = [
    "httpx>=0.27",
    "numpy>=1.26",
    "sentence-transformers>=2.7",
    "torch>=2.2",
    "ncps>=1.0",
]

[project.scripts]
aegis = "aegis.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aegis"]
